= HEAD

  * Major backwards-incompatible changes to the high-level API.
    * strata.createServer/startServer/run have all been replaced by strata.serve
    * All high-level get/post/route/map/etc. methods are gone. This should help
      to prevent confusion when using the build/router APIs.
  * Remove dependency on BufferedStream
  * Require node 0.10.x

= 0.20.1 / 2013-03-28

  * Allow multipart upload of empty files (thanks @jeffbski).
  * Upgrade to BufferedStream 1.6.x.

= 0.20.0 / 2013-03-09

  * Added utils.bufferStream which safely concatenate the contents of streams
    that may contain multi-byte characters.
  * Fix deprecation warning from using util.pump.
  * Removed strata.Error to simplify error handling.
  * strata.version is a string according to semver.
  * Made all tests pass on node 0.9.12.
  * Upgraded to BufferedStream 1.5.1.

= 0.19.3 / 2012-12-21

  * Fixed a bug with decoding session cookies when they contained a double
    hyphen (thanks @CrypticSwarm)
  * Added the ability to get a Buffer from mock.call (thanks @jeffbski)

= 0.19.2 / 2012-11-29

  * Fixed a bug that prevented the build middleware from accepting a "default"
    app to use instead of utils.notFound (thanks @jeffbski)
  * HEAD requests always have the Transfer-Encoding header set the same as the
    equivalent GET (thanks @jeffbski)
  * Upgrade to BufferedStream 1.4.1

= 0.19.1 / 2012-11-10

  * HEAD requests now preserve the value of the Content-Length header (thanks
    @jeffbski)

= 0.19.0 / 2012-10-19

  * strata.maxBufferSize can be used to set the maximum input buffer size for
    new incoming requests.
  * bin/strata now serves the current directory by default when an app.js file
    cannot be found (thanks @iammerrick).
  * bin/strata will try to serve index.html when serving a directory.
  * Renamed utils.isSafe to utils.isSafeRequestMethod.
  * Renamed utils.HTTP_STATUS_CODES to utils.STATUS_CODES.
  * Renamed utils.HTTP_STATUS_MESSAGES to utils.STATUS_MESSAGES.
