@@ -82,8 +82,7 @@ function makeEnv(nodeRequest, protocol, serverName, serverPort) {
     queryString: url.query || '',
     headers: nodeRequest.headers,
     input: nodeRequest,
-    error: process.stderr,
-    strataVersion: strata.version
+    error: process.stderr
   };
 }
 
