@@ -56,8 +56,7 @@ function checkEnv(env) {
     'serverPort',
     'headers',
     'input',
-    'error',
-    'strataVersion'
+    'error'
   ].forEach(function (p) {
     assert(p in env, 'Environment missing required property "' + p + '"');
   });
@@ -91,9 +90,6 @@ function checkEnv(env) {
   // - error             A writable Stream for error output
   assert(env.error instanceof Stream, 'error must be a Stream');
   assert(env.error.writable, 'error must be writable');
-
-  // - strataVersion     A string that indicates the current version of strata
-  assert(typeof env.strataVersion === 'string', 'strataVersion must be a string');
 
   // - flash        A string containing the flash message
   var flash = env.flash;
