@@ -88,7 +88,6 @@ function makeEnv(env) {
   env.scriptName = env.scriptName || '';
   env.pathInfo = env.pathInfo || '';
   env.queryString = env.queryString || '';
-  env.strataVersion = require('./index').version;
 
   // Make sure pathInfo is at least "/".
   if (env.scriptName === '' && env.pathInfo === '') {
